fix(VCard): add overflow-wrap
fixes #15155

--- a/packages/vuetify/src/components/VCard/VCard.sass
+++ b/packages/vuetify/src/components/VCard/VCard.sass
@@ -5,6 +5,7 @@
 .v-card
   display: block
   overflow: hidden
+  overflow-wrap: $card-overflow-wrap
   position: relative
   padding: $card-padding
   text-decoration: none
